[gd_scene load_steps=14 format=3 uid="uid://fc6nhywrn811"]

[ext_resource type="Texture2D" uid="uid://tw8t38ns0seh" path="res://icon.svg" id="1_7p1mj"]
[ext_resource type="Script" uid="uid://b8l5r4bj2qayp" path="res://scenes/enemy.gd" id="1_md0e3"]
[ext_resource type="Script" uid="uid://cjs17fsukx7hw" path="res://components/hurtbox.gd" id="3_4ra3w"]
[ext_resource type="Script" uid="uid://d4mwehpg3gyy8" path="res://components/health_component.gd" id="4_5uy6h"]

[sub_resource type="CircleShape2D" id="CircleShape2D_7p1mj"]
radius = 64.0

[sub_resource type="CircleShape2D" id="CircleShape2D_5uy6h"]
radius = 84.2912

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_4ra3w"]
bg_color = Color(0, 0, 0, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_5uy6h"]
bg_color = Color(0.283357, 0.849587, 2.31028e-06, 1)

[sub_resource type="Animation" id="Animation_c4w8v"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 0)]
}

[sub_resource type="Animation" id="Animation_5uy6h"]
resource_name = "death"
length = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.036739, 0.0788224, 0.123933, 0.174163),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(-129, -10), Vector2(237, 92), Vector2(-25, -260), Vector2(-88, 1070)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_xwavj"]
_data = {
&"RESET": SubResource("Animation_c4w8v"),
&"death": SubResource("Animation_5uy6h")
}

[sub_resource type="SceneReplicationConfig" id="SceneReplicationConfig_5uy6h"]

[sub_resource type="SceneReplicationConfig" id="SceneReplicationConfig_c4w8v"]
properties/0/path = NodePath(".:position")
properties/0/spawn = true
properties/0/replication_mode = 1

[node name="Enemy" type="CharacterBody2D"]
script = ExtResource("1_md0e3")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("1_7p1mj")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_7p1mj")

[node name="Hurtbox" type="Area2D" parent="." node_paths=PackedStringArray("health_component")]
collision_layer = 4
collision_mask = 4
script = ExtResource("3_4ra3w")
health_component = NodePath("../HealthComponent")
metadata/_custom_type_script = "uid://cjs17fsukx7hw"

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hurtbox"]
shape = SubResource("CircleShape2D_5uy6h")

[node name="HealthBar" type="ProgressBar" parent="."]
offset_left = -147.0
offset_top = -163.0
offset_right = 147.0
offset_bottom = -104.0
theme_override_styles/background = SubResource("StyleBoxFlat_4ra3w")
theme_override_styles/fill = SubResource("StyleBoxFlat_5uy6h")
step = 1.0
value = 50.0
show_percentage = false

[node name="NavigationAgent2D" type="NavigationAgent2D" parent="."]
debug_enabled = true

[node name="PathTargetTimer" type="Timer" parent="."]
autostart = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_xwavj")
}

[node name="HealthComponent" type="MultiplayerSynchronizer" parent="."]
replication_config = SubResource("SceneReplicationConfig_5uy6h")
script = ExtResource("4_5uy6h")
metadata/_custom_type_script = "uid://d4mwehpg3gyy8"

[node name="MultiplayerSynchronizer" type="MultiplayerSynchronizer" parent="."]
replication_config = SubResource("SceneReplicationConfig_c4w8v")
